--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   geolocator: ^13.0.1
   sensors_plus: ^6.1.0 # Untuk mendapatkan data kompas
   flutter_qiblah: ^3.0.4 # Untuk fitur arah kiblat
+  google_fonts: ^6.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
